--- a/book.bib
+++ b/book.bib
@@ -841,3 +841,14 @@ publisher={University of Prince Edward Island}
   year={1996},
   publisher={University of Chicago Press}
 }
+
+@InCollection{sep-logical-consequence,
+	author       =	{Beall, Jc and Restall, Greg and Sagi, Gil},
+	title        =	{{Logical Consequence}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2024/entries/logical-consequence/}},
+	year         =	{2024},
+	edition      =	{{S}ummer 2024},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
